--- a/assets/scss/home/_home.scss
+++ b/assets/scss/home/_home.scss
@@ -1,46 +1,35 @@
 nav {
   .logo {
     img {
-      width: 60%;
-      object-fit: contain;
+      @include img(60%, contain, auto);
     }
   }
   #navlist {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
+    @include flex(center, space-around);
     li {
-      list-style: none;
-      list-style-type: none;
+      @include li(none, none);
       a {
-        text-decoration: none;
-        color: gray;
-        font-size: 16px;
-        &:hover {
-          color: #ff4136;
-        }
+        @include alink(none, gray, 16px);
       }
     }
   }
   .icon-nav {
     position: relative;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    @include flex(center, space-between);
     .absolute-icon {
-      position: absolute;
-      right: 32px;
-      bottom: 23px;
-      background-color: #ff4136;
-      color: white;
-      font-size: 12px;
-      border-radius: 50%;
-      padding: 2px 7px;
+      @include position(
+        absolute,
+        32px,
+        23px,
+        $maincolor,
+        white,
+        12px,
+        50%,
+        2px 7px
+      );
     }
     img {
-      width: 30px;
-      height: 30px;
-      object-fit: cover;
+      @include img(30px, cover, 30px);
     }
   }
   @media (max-widht: 576px) {
@@ -58,19 +47,19 @@ nav {
       margin-top: 18px;
     }
     .listsnav {
-      margin-top: 10px;
-      position: absolute;
-      width: 100%;
-      top: 88px;
-      left: 0;
-      right: 0;
-      background-color: white;
-      transform: translateX(-500px);
-      transition: 0.3 ease-in-out;
+      @include secondposition(
+        10px,
+        absolute,
+        100%,
+        88px,
+        0,
+        0,
+        white,
+        translateX(-500px),
+        0.3s ease-in-out
+      );
       ul {
-        padding: 0;
-        display: flex;
-        flex-direction: column;
+        @include ulnav(0, column);
         li {
           padding: 12px 0px;
         }
@@ -122,21 +111,13 @@ header {
 }
 #head-main {
   .main-list {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
+    @include flex(center, space-around);
     li {
-      list-style: none;
-      list-style-type: none;
+      @include li(none, none);
       a {
-        text-decoration: none;
-        color: #666;
-        font-size: 17px;
+        @include alink(none, $lightgray, 17px);
         font-weight: 500;
         line-height: 20px;
-      }
-      .red {
-        color: #ff4136;
       }
     }
   }
@@ -145,49 +126,35 @@ header {
   .cards {
     position: relative;
     img {
-      width: 100%;
-      object-fit: cover;
+      @include img(100%, cover, auto);
     }
     .icon-heart {
-      position: absolute;
-      bottom: 100px;
-      right: 10px;
-      &:hover {
-        color: #ff4136;
-      }
+      @include positionhover(absolute, 100px, 10px);
     }
     .icon-center {
-      opacity: 0;
-      transform: translateY(-50%);
-      transition: 0.3s ease-in-out;
-      position: absolute;
-      top: 100px;
-      right: 107px;
-      background-color: #ffffffad;
-      color: grey;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      padding: 3px 10px;
-      border-left: #666;
+      @include threeposition(
+        0,
+        translateY(-50%),
+        0.3s ease-in-out,
+        absolute,
+        100px,
+        107px,
+        #ffffffad,
+        grey,
+        center,
+        center,
+        3px 10px,
+        $lightgray
+      );
       .left-icon {
         border-right: 2px solid rgba(128, 128, 128, 0.632);
       }
     }
     .oclockcontainer {
-      position: absolute;
-      bottom: 70px;
-      left: 27px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
+      @include oclock(absolute, 70px, 27px, space-between, center);
       .time {
         p {
-          margin: 0;
-          background-color: #ff4136;
-          color: white;
-          width: 50px;
-          height: 50px;
+          @include p(0, #ff4136, white, 50px, 50px);
         }
       }
     }
@@ -198,32 +165,23 @@ header {
       }
     }
     .name {
-      font-family: Poppins, sans-serif;
-      font-weight: 600;
-      &:hover {
-        color: #ff4136;
-        transition: 0.2s ease-in-out;
-      }
+      @include name(Poppins, sans-serif, 600);
     }
     .red {
-      color: #ff4136;
+      color: $maincolor;
       font-weight: 600;
     }
     .gray {
       text-decoration: line-through;
-      color: #666;
+      color: $lightgray;
     }
   }
 }
 #foot {
-  padding: 14px 16px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  @include flex2(14px 16px, column, center, center);
   background-image: url(https://cdn.shopify.com/s/files/1/2300/9895/files/1.jpg?v=1504075577);
   .same {
-    color: #444;
+    color: $darkgary;
     font-size: 18px;
     font-weight: 500;
   }
@@ -233,11 +191,11 @@ header {
     }
     p {
       padding-top: 16px;
-      color: #666;
+      color: $lightgray;
     }
   }
   .textfoot {
-    color: #666;
+    color: $lightgray;
   }
   form {
     input {
@@ -245,41 +203,25 @@ header {
       border: darkgrey 1px solid;
     }
     svg {
-      border: darkgrey 1px solid;
-      width: 45px;
-      height: 42px;
-      color: gray;
-      margin-bottom: 5px;
+      @include svg(darkgrey 1px solid, 45px, 42px, gray, 5px);
     }
   }
   .footicons {
     svg {
-      border-radius: 50%;
-      border: 1px solid;
-      color: #666;
-      padding: 2px;
+      @include svg(1px solid, auto, auto, $lightgray, auto, 2px, 0%);
     }
   }
   .end {
     border-top: 1px solid gray;
-    display: flex;
-    align-items: center;
+    @include flex(center, space-between);
     width: 90%;
-    justify-content: space-between;
     #end {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
+      @include flex(center, space-between);
       gap: 16px;
       li {
-        list-style: none;
-        list-style-type: none;
+        @include li(none, none);
         a {
-          text-decoration: none;
-          color: #444;
-          &:hover {
-            color: #ff4136;
-          }
+          @include alink(none, $darkgary, auto);
         }
       }
     }
@@ -292,13 +234,7 @@ header {
 }
 #secondpage {
   input {
-    width: 100%;
-    border-radius: 12px;
-    padding: 12px 10px;
-    gap: 10px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    @include input(100%, 12px, 12px 10px, 10px, column, center);
   }
   .btn {
     width: 100%;
@@ -308,7 +244,7 @@ header {
 }
 .title {
   text-align: center;
-  color: #ff4136;
+  color: $maincolor;
 }
 .modal-body {
   .modalimg {
@@ -323,18 +259,14 @@ header {
       font-weight: 500;
     }
     .redtext {
-      color: #ff4136;
+      color: $maincolor;
     }
     .small {
       font-size: 12px;
     }
     #increment,
     #decirement {
-      border-radius: 50%;
-      background-color: #ff4136;
-      color: white;
-      padding: 3px 8px;
-      border: none;
+      @include vso(50%, $maincolor, white, 3px 8px, none);
     }
   }
 }
